--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
     }
   },
   "peerDependencies": {
-    "@dojo/framework": "8.0.0-rc.1"
+    "@dojo/framework": "~8.0.0"
   },
   "devDependencies": {
-    "@dojo/cli": "8.0.0-rc.1",
-    "@dojo/cli-build-app": "8.0.0-rc.1",
-    "@dojo/cli-build-theme": "8.0.0-rc.1",
-    "@dojo/cli-build-widget": "8.0.0-rc.1",
-    "@dojo/cli-test-intern": "8.0.0-rc.1",
-    "@dojo/framework": "8.0.0-rc.1",
-    "@dojo/parade": "^2.0.0-rc.4",
+    "@dojo/cli": "~8.0.0",
+    "@dojo/cli-build-app": "~8.0.0",
+    "@dojo/cli-build-theme": "~8.0.0",
+    "@dojo/cli-build-widget": "~8.0.0",
+    "@dojo/cli-test-intern": "~8.0.0",
+    "@dojo/framework": "~8.0.0",
+    "@dojo/parade": "~2.0.0",
     "@dojo/scripts": "^4.0.3",
     "@material/button": "3.0.0",
     "@material/card": "5.1.0",
