--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dojo/widgets",
-  "version": "8.0.0",
+  "version": "8.0.1-pre",
   "description": "Dojo Widgets",
   "private": true,
   "homepage": "https://dojo.io",
