--- a/.dojorc
+++ b/.dojorc
@@ -5,9 +5,7 @@
 	},
 	"build-app": {
 		"locale": "en",
-		"features": {
-			"tests": true
-		}
+		"supportedLocales": ["zh", "zh-CN", "zh-TW"]
 	},
 	"build-widget": {
 		"prefix": "dojo",
